Fix content overflow entry

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -294,6 +294,9 @@
 		}
 	}
 }
+.entry-content {
+	word-wrap: break-word;
+}
 .entry-footer {
 	margin: 3rem -1rem 0;
 	overflow: hidden;
