--- a/style.css
+++ b/style.css
@@ -1657,6 +1657,10 @@ a.page-numbers:hover {
 	}
 }
 
+.entry-content {
+	word-wrap: break-word;
+}
+
 .entry-footer {
 	margin: 3rem -1rem 0;
 	overflow: hidden;
